--- a/styles/family.css
+++ b/styles/family.css
@@ -130,10 +130,10 @@ body{
 }
 .family-member{
     display: flex;
-    align-items: center;
+    align-items: start;
     border-radius: 15px;
     background-color: #3f3f3f;
-    padding: 30px;
+    padding: 40px;
     gap: 30px;
 }
 .family-members-info h1{
@@ -143,7 +143,44 @@ body{
 .family-members-info h2{
     font-size: 30px;
     color: #7F7F7F;
-    line-height: 30px;
+    line-height: 40px;
 }
 
+.family-members__header, .family-gallery__header{
+    margin: 10px 0;
+    font-size: 32px;
+    font-weight: bold;
+}
+.family-members__body{
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
+}
+.family-gallery{
+    margin-top: 50px;
+    margin-left: 120px;
+    margin-bottom: 120px;
+}
+.family-gallery__body {
+    display: flex;
+    max-height: 400px;
+    scroll-snap-type: x mandatory;
+    scrollbar-width: none;
+    overflow-x: auto;
+    gap: 50px;
+    scroll-behavior: smooth;
+    padding: 10px;
+    overflow-y: hidden;
+}
 
+.family-gallery__picture {
+    min-width: 300px;
+    height: 100%;
+    flex-shrink: 0;
+}
+
+.family-gallery__picture img {
+    width: 100%;
+    height: auto;
+    display: block;
+}
