--- a/styles/education.css
+++ b/styles/education.css
@@ -15,6 +15,7 @@
 
 a, a:link, a:visited  {
     text-decoration: none;
+    color: white;
 }
 
 a:hover  {
@@ -124,3 +125,51 @@ legend {
     background-color: #2b2b2b;
     border-radius: 15px;
 }
+body{
+    color: white;
+}
+.year-2021-2023__body, .grades__body{
+    display: flex;
+    align-items: start;
+    border-radius: 15px;
+    background-color: #3f3f3f;
+    padding: 40px;
+    gap: 30px;
+          }
+.year-2021-2023-info h1{
+    font-weight: bold;
+    font-size: 40px;
+}
+.year-2021-2023-info h2{
+    font-size: 30px;
+    color: #7F7F7F;
+    line-height: 40px;
+}
+.year-2021-2023__header, .year-2021-2027__header, .grades__header{
+    margin: 10px 0;
+    font-size: 32px;
+    font-weight: bold;
+}
+.year-2023-2027{
+    margin: 50px 0;
+}
+
+
+.grades__body table {
+    width: 100%;
+    border-collapse: collapse;
+    margin: 20px 0;
+    font-size: 18px;
+    text-align: left;
+}
+
+.grades__body th, .grades__body td {
+    padding: 12px 15px;
+    border: 1px solid #ddd;
+    border-radius: 15px;
+}
+.grades{
+    margin-bottom: 120px;
+}
+
+
