--- a/styles/education.css
+++ b/styles/education.css
@@ -92,9 +92,48 @@ body{
 legend {
     display: block;
 }
-.container{
-    margin: 0 120px;
+
+.container {
+    margin: 0 auto;
+    padding: 0 20px;
+    max-width: 1200px;
 }
+
+.header__user-avatar {
+    max-height: 50px;
+    max-width: 50px;
+}
+
+.header__user-info {
+    align-items: center;
+    display: flex;
+    color: white;
+    font-weight: bold;
+    font-size: 2rem;
+    gap: 10px;
+}
+
+.header__body {
+    display: flex;
+    justify-content: space-between;
+    padding: 30px 0;
+}
+
+.header__navigation ul {
+    color: white;
+    display: flex;
+    flex-direction: row;
+    font-size: 1.25rem;
+    gap: 20px;
+}
+
+.header__navigation {
+    padding: 10px 20px;
+    background-color: #2b2b2b;
+    border-radius: 15px;
+}
+
+
 .header__user-avatar{
     max-height: 50px;
     max-width: 50px;
@@ -171,5 +210,55 @@ body{
 .grades{
     margin-bottom: 120px;
 }
+
+
+@media (max-width: 768px) {
+
+    .year-2021-2023-info h1 {
+        font-size: 32px;
+    }
+
+    .year-2021-2023-info h2 {
+        font-size: 36px;
+    }
+
+    .grades__body table {
+        font-size: 36px;
+    }
+}
+
+@media (min-width: 768px) and (max-width: 1024px) {
+    .header__body {
+        padding: 20px 0;
+    }
+
+    .year-2021-2023-info h1 {
+        font-size: 36px;
+    }
+
+    .year-2021-2023-info h2 {
+        font-size: 28px;
+    }
+
+    .grades__body table {
+        font-size: 18px;
+    }
+}
+
+@media (min-width: 1200px) {
+    .container {
+        max-width: 1440px;
+    }
+
+    .year-2021-2023__body,
+    .grades__body {
+        padding: 50px;
+    }
+
+    .grades__body table {
+        font-size: 20px;
+    }
+}
+
 
 
