--- a/styles/education.css
+++ b/styles/education.css
@@ -210,6 +210,11 @@ body{
 .grades{
     margin-bottom: 120px;
 }
+.hamburger {
+    visibility: hidden;
+    display: none;
+}
+
 
 
 @media (max-width: 768px) {
@@ -229,7 +234,28 @@ body{
 
 @media (min-width: 768px) and (max-width: 1024px) {
     .header__body {
-        padding: 20px 0;
+        padding: 60px 0;
+        flex-direction: row;
+        justify-content: space-between;
+    }
+
+    .header__navigation {
+        height: 100px;
+        visibility: hidden;
+    }
+
+    .hamburger {
+        visibility: visible;
+        height: 50px;
+        width: 50px;
+        display: flex;
+    }
+
+    .header__navigation ul {
+        visibility: hidden;
+        gap: 10px;
+        font-size: 1rem;
+        flex-wrap: wrap;
     }
 
     .year-2021-2023-info h1 {
