--- a/styles/family.css
+++ b/styles/family.css
@@ -224,12 +224,37 @@ body {
         gap: 20px;
     }
 }
+.hamburger {
+    visibility: hidden;
+    display: none;
+}
+
 
 @media (min-width: 768px) and (max-width: 1024px) {
+
     .header__body {
         padding: 60px 0;
         flex-direction: row;
         justify-content: space-between;
+    }
+
+    .header__navigation {
+        height: 100px;
+        visibility: hidden;
+    }
+
+    .hamburger {
+        visibility: visible;
+        height: 50px;
+        width: 50px;
+        display: flex;
+    }
+
+    .header__navigation ul {
+        visibility: hidden;
+        gap: 10px;
+        font-size: 1rem;
+        flex-wrap: wrap;
     }
 
     .family-members-info h1 {
